@@ -1,46 +1,50 @@
+- snippet_blob = chunk_snippet(snippet_blob, @search_term)
+- snippet = snippet_blob[:snippet_object]
+- snippet_chunks = snippet_blob[:snippet_chunks]
+
 .search-result-row
   %span
-    = snippet_blob[:snippet_object].title
+    = snippet.title
     by
-    = link_to user_snippets_path(snippet_blob[:snippet_object].author) do
-      = image_tag avatar_icon(snippet_blob[:snippet_object].author_email), class: "avatar avatar-inline s16", alt: ''
-      = snippet_blob[:snippet_object].author_name
-    %span.light #{time_ago_with_tooltip(snippet_blob[:snippet_object].created_at)}
+    = link_to user_snippets_path(snippet.author) do
+      = image_tag avatar_icon(snippet.author_email), class: "avatar avatar-inline s16", alt: ''
+      = snippet.author_name
+    %span.light #{time_ago_with_tooltip(snippet.created_at)}
   %h4.snippet-title
-  - snippet_path = reliable_snippet_path(snippet_blob[:snippet_object])
+  - snippet_path = reliable_snippet_path(snippet)
   = link_to snippet_path do
     .file-holder
       .file-title
         %i.fa.fa-file
-        %strong= snippet_blob[:snippet_object].file_name
-      - if markup?(snippet_blob[:snippet_object].file_name)
+        %strong= snippet.file_name
+      - if markup?(snippet.file_name)
         .file-content.wiki
-          - snippet_blob[:snippet_chunks].each do |snippet|
-            - unless snippet[:data].empty?
-              = render_markup(snippet_blob[:snippet_object].file_name, snippet[:data])
+          - snippet_chunks.each do |chunk|
+            - unless chunk[:data].empty?
+              = render_markup(snippet.file_name, chunk[:data])
             - else
               .file-content.code
                 .nothing-here-block Empty file
       - else
         .file-content.code.js-syntax-highlight
           .line-numbers
-            - snippet_blob[:snippet_chunks].each do |snippet|
-              - unless snippet[:data].empty?
-                - snippet[:data].lines.to_a.size.times do |index|
-                  - offset = defined?(snippet[:start_line]) ? snippet[:start_line] : 1
+            - snippet_chunks.each do |chunk|
+              - unless chunk[:data].empty?
+                - chunk[:data].lines.to_a.size.times do |index|
+                  - offset = defined?(chunk[:start_line]) ? chunk[:start_line] : 1
                   - i = index + offset
                   = link_to snippet_path+"#L#{i}", id: "L#{i}", rel: "#L#{i}", class: "diff-line-num" do
                     %i.fa.fa-link
                     = i
-                - unless snippet == snippet_blob[:snippet_chunks].last
+                - unless snippet == snippet_chunks.last
                   %a.diff-line-num
                     = "."
           %pre.code
             %code
-              - snippet_blob[:snippet_chunks].each do |snippet|
-                - unless snippet[:data].empty?
-                  = snippet[:data]
-                  - unless snippet == snippet_blob[:snippet_chunks].last
+              - snippet_chunks.each do |chunk|
+                - unless chunk[:data].empty?
+                  = chunk[:data]
+                  - unless chunk == snippet_chunks.last
                     %a
                       = "..."
                 - else
